--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.css" rel="stylesheet">
+    <link href="css/johnstsai.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -18,7 +19,44 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbarcollapse">
+                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+        </button>
+          <a class="navbar-brand" href="#">Home</a> 
+        </div>
+      <div class="collapse navbar-collapse" id="navbarcollapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#about">About</a></li>
+          <li><a href="#work">Work</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul> 
+      </div>
+    </nav>
+
+    <header>
+      <div class="header-content">
+        <h1>Hello, world!</h1>
+      </div>
+    </header>
+    
+    <section id="about">
+      <div class="container">
+      </div>
+    </section>
+
+    <section id="work">
+      <div class="container">
+      </div>
+    </section>
+
+    <section id="contact">
+      <div class="container">
+      </div>
+    </section>
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
